# churchito

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RUNBOOK.md  config.json.example  docker-build.sh  docker-compose.override.yml.example  docker-compose.yml  purga.json.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cog-validation.yml
discord_bot/: __init__.py  __main__.py  __version__.py  bot.py
discord_bot/autoname/: __init__.py  cog.py  config.py  service.py
discord_bot/common/: __init__.py
discord_bot/common/connectors/: __init__.py
discord_bot/common/core/: __init__.py  app_settings.py  logging.py
discord_bot/common/enums/: __init__.py  config_option_type.py  embed_section_type.py  event_type.py
discord_bot/common/models/: __init__.py  base.py  guild.py  guild_cog_enabled.py  guild_config.py
discord_bot/common/schemas/: __init__.py  cog_config_schema.py  config_option.py  embed_section.py  user_context.py
discord_bot/common/services/: __init__.py  config_schema_service.py  config_service.py  database.py  embed_builder.py  event_bus.py
discord_bot/common/utils/: __init__.py  discord.py  embed_config_columns.py  game_data.py
discord_bot/data/: hex_cities.json
discord_bot/general/: __init__.py  cog.py
discord_bot/i18n/: __init__.py  default_migrator.py  schema_translator.py
discord_bot/i18n/locales/: en.json  es.json
discord_bot/purga/: __init__.py  cog.py  config.py  execution.py  formatters.py  service.py  settings.py
discord_bot/purga/enums/: __init__.py  config_key.py  purga_status.py  purga_type.py
discord_bot/purga/models/: __init__.py  purga_record.py  purga_user_result.py
discord_bot/purga/views/: __init__.py  mod_authorization.py  user_confirmation.py
discord_bot/purge/: __init__.py  cog.py  config.py  execution.py  formatters.py  service.py  settings.py
discord_bot/purge/enums/: __init__.py  config_key.py  purge_status.py  purge_type.py
discord_bot/purge/models/: __init__.py  purge_record.py  purge_user_result.py
discord_bot/purge/views/: __init__.py  mod_authorization.py  user_confirmation.py
discord_bot/roles/: __init__.py  cog.py  config.py  formatters.py  service.py
discord_bot/roles/enums/: __init__.py  config_key.py
discord_bot/roles/models/: __init__.py  reaction_panel.py
discord_bot/roles/views/: __init__.py
discord_bot/stockpile/: __init__.py  cog.py  config.py  formatters.py  service.py
discord_bot/stockpile/enums/: __init__.py  config_key.py
discord_bot/stockpile/models/: __init__.py  stockpile.py
discord_bot/verification/: __init__.py  api_client.py  auto_processor.py  cog.py  config.py  formatters.py  handlers.py  panel.py  service.py
discord_bot/verification/enums/: __init__.py  auto_process_mode.py  config_key.py  name_match_mode.py  reject_type.py  verification_status.py  verification_type.py
discord_bot/verification/handlers/: __init__.py  auto_processing.py  flow.py  mod_messages.py  utils.py  welcome_card.py
discord_bot/verification/models/: __init__.py  api_response.py  verification_request.py
discord_bot/verification/views/: __init__.py  auto_reject_review.py  mod_review.py  protocols.py  rejection_modal.py  rejection_select.py  (+1 more)
discord_bot/web/: __init__.py  app.py  dependencies.py
docs/: contributing.md  setup.md  testing.md
docs/CODEMAPS/: INDEX.md  architecture.md  backend.md  cogs.md  data.md  dependencies.md
docs/config/: config.example.json
migrations/: env.py
migrations/versions/: 0466b869c689_add_purga_records_table.py  7d4d04118780_initial_schema.py  9d2924fb47a6_add_invited_by_id_to_guilds.py  a1b2c3d4e5f6_convert_header_to_text_sections.py  a2324ea221e5_fix_exclusive_require_existing_sqlite.py  a5b6c7d8e9f0_add_stockpiles_table.py  b2c3d4e5f6g7_add_public_id_to_verification_and_purga.py  c3d4e5f6a7b8_add_player_info_to_verification.py  c42443ef0dd0_rename_purga_to_purge_tables.py  cf032f502400_add_guild_language.py  d32877b15cc0_consolidate_mod_embed_config.py  e3500efa1ba3_migrate_player_info_template_to_sections.py  e3bbb18b1809_add_cancelled_by_to_purga_records.py  e89b3f1774f4_convert_verification_automatic_to_enum.py  e8d46a4c1578_use_timezone_aware_timestamps.py  e93ba4d9c838_add_purga_user_results_table.py  f1a2b3c4d5e6_migrate_blocking_roles.py  fc6585a02a0f_convert_verification_match_name_to_enum.py  g1h2i3j4k5l6_migrate_stockpile_notifications_to_embed.py  h2i3j4k5l6m7_migrate_stockpile_show_to_embed.py  i3j4k5l6m7n8_add_reaction_panels_table.py
scripts/: new_cog.py  run_tests.sh  update_dependencies.py  validate_cog_structure.py
tests/: conftest.py  test_bot.py  test_main.py
tests/autoname/: __init__.py  test_cog.py  test_service.py
tests/common/: test_game_data.py
tests/general/: __init__.py  test_cog.py
tests/i18n/: __init__.py  test_default_migrator.py  test_i18n_service.py  test_schema_translator.py
tests/purga/: __init__.py  test_cog.py  test_config.py  test_execution.py  test_formatters.py  test_service.py  test_views.py
tests/purge/: __init__.py  test_cog.py  test_config.py  test_execution.py  test_formatters.py  test_service.py  test_views.py
tests/roles/: __init__.py  conftest.py  test_cog.py  test_config.py  test_formatters.py  test_models.py  test_service.py
tests/stockpile/: __init__.py  conftest.py  test_cog.py  test_config.py  test_formatters.py  test_service.py
tests/verification/: __init__.py  test_api_client.py  test_auto_processor.py  test_cog.py  test_config.py  test_formatters.py  test_handlers.py  test_service.py  test_views.py  test_welcome_card.py
tests/web/: __init__.py  conftest.py  test_app.py  test_config_language.py  test_config_router.py  test_config_routes.py  test_dashboard.py  test_dashboard_routes.py  test_dependencies.py  test_middleware_content_size.py  test_middleware_csrf.py  test_middleware_rate_limit.py  test_middleware_security_headers.py  test_oauth.py  test_oauth_flow.py  test_panels_router.py
(+39 files in other folders)
