[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-bot"
dynamic = ["version"]
description = "Discord bot skeleton with cog-based architecture"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jorge García", email = "jgroca@gmail.com"},
]
maintainers = [
    {name = "Jorge García", email = "jgroca@gmail.com"},
]
keywords = ["discord", "bot", "discord-py", "cogs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.12"
dependencies = [
    # Discord
    "discord.py>=2.3.0",

    # Settings & Configuration
    "pydantic>=2.12.3",
    "pydantic_settings>=2.11.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",

    # HTTP Client
    "httpx>=0.27.0",

    # Web Dashboard
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",

    # Code Quality & Formatting
    "mypy>=1.18.2",
    "ruff>=0.14.1",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/xurxogr/discord-bot"
Repository = "https://github.com/xurxogr/discord-bot"

[tool.setuptools.dynamic]
version = {attr = "discord_bot.__version__.__version__"}

[tool.setuptools.packages.find]
include = ["discord_bot*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "discord.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
preview = true
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "D",      # pydocstyle (docstring checks)
    "ASYNC",  # flake8-async (detect blocking calls in async functions)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::RuntimeWarning",
]

[project.scripts]
7hpbot = "discord_bot.__main__:run"
