[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-bot"
dynamic = ["version"]
description = "Discord bot skeleton with cog-based architecture"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jorge García", email = "jgroca@gmail.com"},
]
maintainers = [
    {name = "Jorge García", email = "jgroca@gmail.com"},
]
keywords = ["discord", "bot", "discord-py", "cogs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.12"
dependencies = [
    # Discord
    "discord.py>=2.3.0",

    # Settings & Configuration
    "pydantic>=2.13.4",
    "pydantic_settings>=2.14.2",

    # Database
    "sqlalchemy[asyncio]>=2.0.51",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.3.4",
    "alembic>=1.18.5",

    # HTTP Client
    "httpx>=0.27.0",

    # Image generation (welcome cards)
    "pillow>=10.1.0",

    # ID Generation
    "nanoid>=2.0.0",

    # Web Dashboard
    "fastapi==0.138.1",
    "uvicorn[standard]>=0.49.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.32",
    "itsdangerous>=2.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.5.0",

    # Code Quality & Formatting
    "mypy>=2.1.0",
    "ruff==0.15.20",
    "pre-commit>=4.6.0",

    # Security & Code Analysis
    "vulture>=2.16",
    "pip-audit>=2.10.1",
]

[project.urls]
Homepage = "https://github.com/xurxogr/discord-bot"
Repository = "https://github.com/xurxogr/discord-bot"

[tool.setuptools.dynamic]
version = {attr = "discord_bot.__version__.__version__"}

[tool.setuptools.packages.find]
include = ["discord_bot*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["discord.*", "nanoid", "nanoid.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
# Relax strict checking for tests - mock patterns are common and don't type-check well
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
disable_error_code = [
    "method-assign",       # Allow assigning to methods (mock patterns)
    "attr-defined",        # Allow accessing mock attributes like .assert_called
    "union-attr",          # Allow accessing attrs on potentially None (mock.user.id)
    "arg-type",            # Allow flexible argument types with mocks
    "comparison-overlap",  # Allow comparing StrEnum values with strings
    "no-redef",            # Allow duplicate test class names
    "type-arg",            # Allow missing type parameters for generics
    "misc",                # Allow assigning to read-only properties (mock.guilds)
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
preview = true
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "D",      # pydocstyle (docstring checks)
    "ASYNC",  # flake8-async (detect blocking calls in async functions)
    "S",      # flake8-bandit (security checks)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S104", "S105", "S106"]  # Tests use asserts, fake secrets, etc.
"migrations/**/*.py" = ["S608"]  # SQL in migrations uses safe patterns
"scripts/**/*.py" = ["S404", "S603", "S608"]  # Scripts use subprocess and SQL intentionally

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
# Use loadfile distribution for better coverage combining
addopts = "-n auto --dist=loadfile --cov=discord_bot --cov-report=term-missing"
filterwarnings = [
    "ignore::RuntimeWarning",
]

[tool.coverage.run]
source = ["discord_bot"]
parallel = true
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 98
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[project.scripts]
discord-bot = "discord_bot.__main__:run"
